# ComfyUI-GLHF

./: README.md  __init__.py  config.json  glhf.py  pyproject.toml  requirements.txt
.github/workflows/: publish_action.yml
custom_instructions/: prompt generator.txt
