[project]
name = "comfyui-glhf"
description = "GLHF is a ComfyUI node that facilitates seamless interaction with the GLHF chat API. Designed to enhance user experience, it supports multiple language models, web search integration, and customizable instructions, making it a powerful extension for AI-driven workflows."
version = "1.0.1"
license = {file = "LICENSE"}
dependencies = ["openai", "googlesearch-python", "requests", "bs4"]

[project.urls]
Repository = "https://github.com/fairy-root/ComfyUI-GLHF"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "fairy-root"
DisplayName = "ComfyUI-GLHF"
Icon = ""
